--- a/src/css/stylesheet.scss
+++ b/src/css/stylesheet.scss
@@ -1,63 +1,45 @@
-header{
-  display: block;
+body{               // this styles the navbar so that there's no additional spacing anywhere
+  margin: 0;
+  padding: 0;
+}
+
+  
+.header-container{
+  height: 15vh;
+  background-color: black;
+  border:1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 150px;
+}
+
+.logo{
+  height:100%;
+  width: 175px;
+  border:1px solid red;
+}
+
+.logo img{
+  height: 100%;
   width: 100%;
-  background: black;
+}
+
+.menu{
+  height: 100%;
+  width: 300px;
+  border:1px solid blue;
+  display:flex;
+  flex-direction: row;
+}
+
+.list-item{
+  font-family: 'Lato', sans-serif;
+  font-size:calc(19px);
   color: white;
-  height: 90px;
-  font-family: sans-serif;
-  font-size: 20px;
-
-    .logo{
-    position:absolute;
-    top:5vh; left: 15px;
-    }
-
-    nav,
-    nav ul,
-    nav ul li{
-      margin: 0;
-      padding-left: 0;
-    }
-
-    nav{
-
-      position: absolute;
-      top: 5vh; right: 20px;
-      flex-direction: row;
-      flex-wrap: wrap;
-      // padding-left:400px ;
-    }
-
-    ul li{
-      list-style-type: none;
-      display: inline-block;
-      margin-right: 15px;
-
-        &.last{
-          margin: 0;
-        }
-
-        a{
-          padding: 10px;
-          font-size: 20px;
-          line-height: normal;
-          color: white;
-          &:hover{
-
-            color: #ff1755;
-          }
-          text-decoration: none;
-
-        }
-    }
+  display: flex;
+  flex:1;
+  align-items: center;
+  justify-content: center;
+  border:2px solid green;
 }
-
-h1{
-  font-family: sans-serif;;
-  font-size: 30px;
-}
-
-p{
-    font-family: sans-serif;
-    font-size: 20px;
-  }
